Added tea into store

--- a/store/index.html
+++ b/store/index.html
@@ -84,6 +84,46 @@
       <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
       </form></h6>
     </div>
+
+    <div class="store-book-container">
+        <h3><span class="red-highlight">NEW!</span> Big Red Robe Tea</h3>
+        <h4>$30</h4>
+        <a href="#robetea-popup" class="animated_popup"><img src="../assets/images/robetea.jpg"></a>
+        <h5><a href="#robetea-popup" class="animated_popup book-details-link">Tea Details</a></h5>
+        <div id="robetea-popup" style="display:none">
+          <h3>Big Red Robe Tea</h3>
+          <p><img src="../assets/images/robetea2.jpg"></p>
+
+          <p>Each box contain 32 8 gram bags.</p>
+
+          <p>Benefits: Improve digestion, fight cancer, benefits the heart</p>
+
+          <p><strong>Instructions for tea:</strong>
+          <br>Rinse. Use boiled water to cover the tea, shake or stir it a few times and pour the water out.
+
+          <br>For 1 or 2 person, use half a bag. Refill water up to 8 times or until the flavor is too blend for your taste. It’s better not to put too much water, just keep refilling it. The flavor is different each time, the best flavor should be the second to the fourth time.
+
+          <br>Use one bag for 2 or more people, or if you are going to refill throughout the day. Red/black tea can be kept for the next day; just pour out the leftover liquid. 
+
+          <br>Enjoy! </p>
+
+          <p><strong>History:</strong> Dà Hóng Páo (Chinese: 大红袍; pinyin: dà​hóng páo; literally "Big Red Robe") is an importantWuyi Oolong tea. According to legend, the mother of a Ming Dynasty emperor was cured of an illness by a certain tea, and that emperor sent great red robes to clothe the four bushes from which that tea originated. Three of these original bushes, growing on a rock on Mount Wuyi and reportedly dates back to the Song Dynasty, still survive today and are highly venerated. At one point, less than one kilogram of tea was harvested from these plants each year, of which a portion was retained by the Chinese government. In 2005, Da Hong Pao can sell for 30,000 US dollars per kilogram.</p>
+
+          <p>One (possibly apocryphal) story claims that in 1972, US President Nixon received 50g of Dà Hóng Páo, at the estimated cost of 250,000 US Dollars in 2011 money.</p>
+
+          <p>In recent years, a number of companies have invested in preserving the interest in this tea and other so-called "artisan" teas, which typically are of very high quality and have rich histories as is true with Da Hong Pao. These have an initially high cost of production (and typically are only considered authentic when grown in their place of origin), but, as they have quickly become popular in Western countries, prized selections of the tea are available each year, with quality being consistent due to the increased popularity of tea.</p>
+
+          <p>Cuttings taken from the original plants have been used to produce similar grades of tea from genetically identical plants. Taste variations produced by processing, differences in the soil, and location of these later generation plants is used to grade the quality of various Da Hong Pao teas.</p>
+
+          <p>Due to its high quality, Da Hong Pao tea is usually reserved for honored guests in China.</p>
+
+        </div>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="LP5XQRQ4JRUUQ">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
+    </div>
       
     <div class="history-container store">
       <h1>Books</h1>
