--- a/workshops/index.html
+++ b/workshops/index.html
@@ -132,7 +132,7 @@
 	<p>
 	One day, Saturday, will be forms. As usual, the workshop will be held
 	at La Gavina, a beautiful Countryside Inn and organic farm in Tuscany.
-	Directions can be found on the website: <a href="http://www.lagavina.it/">La Gavina</a>
+	Directions can be found on the website: <a href="http://www.lagavina.it/" target="_blank">La Gavina</a>
 	</p>
 
 	<p>Nearby is the Chianti region famous for its wines and oil.  Hot
