--- a/workshops/index.html
+++ b/workshops/index.html
@@ -256,7 +256,7 @@
        <h2>August 12th to August 15th 2016</h2>
             <div id="upstate2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Upstate New York - Push Hands</h3>
-        <p>For more information email <a href="slowset@gmail.com">slowset@gmail.com</a></p>
+        <p>For more information email <a href="mcheo@hvc.rr.com">mcheo@hvc.rr.com</a></p>
       </div>
 
 
