--- a/workshops/index.html
+++ b/workshops/index.html
@@ -175,9 +175,42 @@
             <div id="london2016" style="display:none" class="image-popup" class="book-details-popup">
       <h3>London Workshop</h3>
 
-	<p>Three days of classes, at Fanshawe Community Hall, Barnmead Road
-	Dagenham RM9 5DX</p>
-	<p>More details to follow: Contact: taichichaun@gmail.com</p>
+	<p>
+	Master Alex Dong will be teaching in London for three days in May 2016:
+	Saturday May 28th to Bank Holiday Monday May 30th.
+	</p>
+
+	<p>The venue will be Fanshawe Community Hall, Barnmead Road, Dagenham, RM9 5DX: 
+		<a href="https://www.google.co.uk/maps/place/Fanshawe+Community+Centre/@51.5472195,0.1423947,17z/data=!3m1!4b1!4m2!3m1!1s0x47d8a50631b7687b:0x5340cea3bd05c1cf" target="_blank">map</a>
+	</p>
+
+	<p>Nearest tube Dagenham Heathway. Short walk from the station (along
+	Heathway and turn left into Halbutt Street.</p>
+
+	<p>Class times: morning 10:30 to 13:00 and afternoon 14:30 to 17:00</p>
+	<p>Saturday, Slow Set only  (morning and afternoon).</p>
+	<p>Sunday morning, no class.</p>
+	<p>Sunday afternoon, Push Hands.</p>
+	<p>Monday morning Hao and Fast (Fa jin) Forms.</p>
+	<p>Afternoon sword and an introduction to The Sticks.</p>
+
+	<p>Participans should prepare two sticks about the same length as the Sabre. If you
+	hold one end, the other end should be to above the shoulders.</p>
+
+	<dl>
+	<dt>Fees</dt>
+	<dd>One class &pound;35</dd>
+	<dd>Two classes &pound;70</dd>
+	<dd>Three classes &pound;90</dd>
+	<dd>Four classes &pound;120</dd>
+	<dd>Five classes &pound;150</dd>
+	</dl>
+
+	<p>Please pay cash on the day.</p>
+
+	<p>Contact: Dave Fricker Email:
+	<a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a></p>
+
 	</div>
 	
 	<a href="#prague2016" class="animated_popup"><h1>Prague, Czech Republic</h1></a>
