--- a/workshops/index.html
+++ b/workshops/index.html
@@ -187,12 +187,15 @@
 	<p>Nearest tube Dagenham Heathway. Short walk from the station (along
 	Heathway and turn left into Halbutt Street.</p>
 
-	<p>Class times: morning 10:30 to 13:00 and afternoon 14:30 to 17:00</p>
-	<p>Saturday, Slow Set only  (morning and afternoon).</p>
-	<p>Sunday morning, no class.</p>
-	<p>Sunday afternoon, Push Hands.</p>
-	<p>Monday morning Hao and Fast (Fa jin) Forms.</p>
-	<p>Afternoon sword and an introduction to The Sticks.</p>
+	<dl>
+	<dt>Details</dt>
+	<dd>Class times: morning 10:30 to 13:00 and afternoon 14:30 to 17:00</dd>
+	<dd>Saturday, Slow Set only  (morning and afternoon).</dd>
+	<dd>Sunday morning, no class.</p>
+	<dd>Sunday afternoon, Push Hands.</dd>
+	<dd>Monday morning Hao and Fast (Fa jin) Forms.</dd>
+	<dd>Monday afternoon sword and an introduction to The Sticks.</dd>
+	</dl>
 
 	<p>Participans should prepare two sticks about the same length as the Sabre. If you
 	hold one end, the other end should be to above the shoulders.</p>
