--- a/workshops/index.html
+++ b/workshops/index.html
@@ -190,8 +190,8 @@
 	<dl>
 	<dt>Details</dt>
 	<dd>Class times: morning 10:30 to 13:00 and afternoon 14:30 to 17:00</dd>
-	<dd>Saturday, Slow Set only  (morning and afternoon).</dd>
-	<dd>Sunday morning, no class.</p>
+	<dd>Saturday, Slow Set  (morning and afternoon).</dd>
+	<dd>Sunday morning, no class.</dd>
 	<dd>Sunday afternoon, Push Hands.</dd>
 	<dd>Monday morning Hao and Fast (Fa jin) Forms.</dd>
 	<dd>Monday afternoon sword and an introduction to The Sticks.</dd>
