--- a/workshops/index.html
+++ b/workshops/index.html
@@ -198,7 +198,7 @@
 	</dl>
 
 	<p>Participans should prepare two sticks about the same length as the Sabre. If you
-	hold one end, the other end should be to above the shoulders.</p>
+	hold one end, the other end should be just above your shoulder.</p>
 
 	<dl>
 	<dt>Fees</dt>
