--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -51,9 +51,7 @@
         <img src="../../assets/images/instructor/duncanelliot.jpg">
         <p>I started tai chi in Earls Court in 2004, whilst at the gym. I was looking for alternatives to weight training that would be good for health and also to relax after my driving job. I tried the class there with Nancy Lam, she was very kind and patient with new members. I found the class very relaxing and calming and never looked back. I have on occasions gone to other classes with Gordon Joly and Arthur Martin when work permits and attended seminars with Master Alex Dong. Sadly after Nancy passed away in 2012, the Earls court class members decided to continue with me as the leader as Nancy's most regular and longest serving student at Earls Court.</p>
       </div>
-      <p>Monday Beginners (all levels) 2:00pm to 3:30pm
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?SW5+0BS" target="_blank">Brompton Library, 210 Old Brompton Road, Earls Court, London SW5 0BS.</a> Cost £10.00</p>
-      <p>Phone: 075 3109 5217 or Email: <a href="mailto:duncanelliott@yahoo.co.uk">duncanelliott@yahoo.co.uk</a></p>
+      <p>No classes at present. Email: <a href="mailto:duncanelliott@yahoo.co.uk">duncanelliott@yahoo.co.uk</a></p>
     </div>
 
     <div class="history-container classes-container instructor-container">
