--- a/workshops/index.html
+++ b/workshops/index.html
@@ -276,6 +276,12 @@
        <h2>July 30th to 1st August 2016</h2>
             <div id="carmel2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Carmel, California</h3>
+        <dl></dl>
+	<dt>Details</dt>
+	<dd>July 30 Community Church 9:30-12:00 Slow Set 2:4:30 Slow Set</dd>
+	<dd>July 31 Carmel Foundation 9:30-12:00 Slow Set 2:4:30 Hao Form</dd>
+	<dd>Aug   1 Community Church 9:30-12:00 Slow Set 2:4:30 Family Fast Form</dd>
+	</dl>
 	<p>For more information email
         <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a>
         or <a href="mailto:temasuda@hotmail.com">temasuda@hotmail.com</a></dd>
