--- a/workshops/index.html
+++ b/workshops/index.html
@@ -93,7 +93,7 @@
 	  to both parties. 
 	</p>
 	<p>
-	  Please complete the <a href="/worskshops/WW2016.doc">registration form</a>
+	  Please complete the <a href="http://alexdongtaichi.com/worskshops/WW2016.doc">registration form</a>
 	</p>
 	<p>
 	  Be sure to email <a href="mailto:alexdongtaiji@gmail.com?subject=WW 2016">Alex Dong</a>
