--- a/workshops/index.html
+++ b/workshops/index.html
@@ -252,6 +252,9 @@
        <h2>August 12th to August 15th 2016</h2>
             <div id="upstate2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Upstate New York - Push Hands</h3>
+        <p>4-Day Camp Intensive in New York’s Hudson Valley</p>
+        <p>Lifebridge Sanctuary, Rosendale New York</p>
+	<p>Full details and a registration form are <a href="http://alexdongtaichi.com/assets/docs/NYPH8-16.doc"">here</a></p>
         <p>For more information email <a href="mcheo@hvc.rr.com">mcheo@hvc.rr.com</a></p>
       </div>
 
