--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       </ul>
     </nav>
     <div class="homepage-header-text">
-      <h1>Master Alex Dong</h1>
-      <h2>Fourth Generation Tai Chi Chuan Master</h2>
+      <h2>Alex Dong International Taijiquan Association</h2>
     </div>
   </header>
 
