--- a/workshops/index.html
+++ b/workshops/index.html
@@ -255,7 +255,7 @@
         <p>4-Day Camp Intensive in New York’s Hudson Valley</p>
         <p>Lifebridge Sanctuary, Rosendale New York</p>
 	<p>Full details and a registration form are <a href="http://alexdongtaichi.com/assets/docs/NYPH8-16.doc"">here</a></p>
-        <p>For more information email <a href="mcheo@hvc.rr.com">mcheo@hvc.rr.com</a></p>
+        <p>For more information email  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
       </div>
 
 
