--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -4,7 +4,8 @@
 
   <head>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../assets/css/css.css">
+    <link rel="stylesheet" href="../../assets/css/css.css">
+    <link rel="stylesheet" href="../../assets/css/popup.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Alex Dong Taiji</title>
@@ -17,17 +18,16 @@
       <ul class="nav-ul-homepage">
         <li><a href="http://alexdongtaichi.com">Home</a></a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-        <li><a href="../classes/">Classes</a></li>
-        <li><a href="../legacy/">Legacy</a></li>
-        <li><a class="workshop-highlight" href="../workshops/">Workshops</a></li>
-        <li><a class="store-button" href="../store/">Store</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
+        <li><a class="store-button" href="../../store/">Store</a></li>
       </ul>
     </nav>
   </header>
 
   <div class="header-background">
-    <h1>Classes</h1>
-    <h3>New York City And Around The World</h3>
+    <h1>New York City</h1>
   </div>
 
   <section class="history-classes">
@@ -47,6 +47,92 @@
       <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com.</a></h3>
     </div>
   </section>
+  
+
+
+  <footer>
+    <nav class="footer-homepage">
+      <ul class="footer-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a href="../../workshops/">Workshops</a></li>
+        <li><a href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="../../assets/js/jquery.popup.js"></script>
+  <script>
+    $(function(){
+      /*-------------------------------
+        GENERAL EXAMPLES
+      -------------------------------*/
+      // Default usage
+      $('.default_popup').popup();
+      // Animated popup
+      $('.animated_popup').popup({
+        show        : function($popup, $back){
+          var plugin = this,
+            center = plugin.getCenter();
+          $popup
+            .css({
+              top     : - $popup.children().outerHeight(),
+              left    : center.left,
+              opacity : 1
+            })
+            .animate({top : center.top}, 500, 'easeOutBack', function(){
+              // Call the open callback
+              plugin.o.afterOpen.call(plugin);
+            });
+        }
+      });
+      // Call ALL the callbacks
+      $('.callback_popup').popup({
+        beforeOpen          : function(type){
+          console.log('beforeOpen -', type);
+        },
+        afterOpen           : function(){
+          console.log('afterOpen');
+        },
+        beforeClose         : function(){
+          console.log('beforeClose');
+        },
+        afterClose          : function(){
+          console.log('afterClose');
+        }
+      });
+      // Error popup
+      $('.error_popup').popup({
+        error   : function(content, type){
+          // Just call open again, it'll replace the content
+          this.open('<h1>ERROR!</h1><p>Content "'+content+'" of type "'+type+'" could not be loaded.</p>', 'html');
+        }
+      });
+    });
+    /*---------------------
+      JQUERY EASING
+    */
+    $.extend($.easing, {
+      easeOutBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*((t=t/d-1)*t*((s+1)*t + s) + 1) + b;
+      },
+      easeInBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*(t/=d)*t*((s+1)*t - s) + b;
+      }
+    });
+  </script>
+
+</body>
+
+</html>
+
+
+
 
   <footer>
     <nav class="footer-homepage">
