--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -32,7 +32,7 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
-      <h1>New York City</h1>
+      <h1>Instructor: Master Alex Dong</h1>
       <h2>Tuesday evenings from 6pm to 8pm.</h2>
       <p>For students with some experience. Please inquire if you are interested.
       We are currently working on the Slow form, Fajin form, Hard form (Hao) and Push Hands.
