--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -33,18 +33,18 @@
   <section class="history-classes">
     <div class="history-container classes-container">
       <h1><font color="red">Instructor: Master Alex Dong</font></h1>
-      <h2>Tuesday evenings from 6pm to 8pm.</h2>
+      <h2>Tuesday evenings from 6pm to 8pm</h2>
       <p>For students with some experience. Please inquire if you are interested.
       We are currently working on the Slow form, Fajin form, Hard form (Hao) and Push Hands.
       Visitors may attend and pay a per class fee of $35.</p>
-      <h2>Thursday evenings 7 pm to 8:30 pm</h2>
+      <h2>Thursday evenings 7pm to 8:30pm</h2>
       <p>New students must sign up for the first cycle/4 classes-$90 or first two cycles/8 classes for $150.
       <br>From 7 pm to 7:30 pm: Warm ups, Stretching, Qigong and Meditation.
       <br>From 7:30 pm to 8:30 pm: Basic Taiji training and starting Taiji form.</p>
       <h2>Monthly workshop</h2>
       <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.</p>
       <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Street, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th Street on the W, R trains, and Astor Place on the 6 trains.</p>
-      <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com.</a></h3>
+      <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></h3>
     </div>
   </section>
   
