--- a/classes/index.html
+++ b/classes/index.html
@@ -52,11 +52,11 @@
     <div class="america-container">
       <h2>United States</h2>
       <ul class="classes-ul">
+        <li><a href="newyorkcity/">New York City</a></li>
         <li><a href="carmelvalley/">Carmel Valley, California</a></li>
         <li><a href="pacificgrove/">Pacific Grove, California</a></li>
         <li><a href="santabarbara/">Santa Barbara, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
-     <!--    <li><a href="newlondon/">New London, Connecticut</a></li> -->
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
         <li><a href="longisland/">Long Island, New York</a></li>
         <li><a href="syracuse/">Syracuse, New York</a></li>
