--- a/classes/index.html
+++ b/classes/index.html
@@ -29,6 +29,7 @@
     <h1>Classes</h1>
     <h3>New York City And Around The World</h3>
   </div>
+  <p>Master Alex Dong teaches classes in New York City. Registered instructors in the Association teach at centers around the world.</p>
 
   <section class="north-america-classes">
     <div class="america-container">
