--- a/classes/index.html
+++ b/classes/index.html
@@ -29,8 +29,16 @@
     <h1>Classes</h1>
     <h3>New York City And Around The World</h3>
   </div>
-  <p>Master Alex Dong teaches classes in New York City. Registered instructors in the Association teach at centers around the world.</p>
+  
 
+  <section class="history lineage">
+    <div class="history-container"
+  <p>Master Alex Dong teaches classes in New York City. Registered instructors in the 
+    Association teach at centers around the world.</p>
+    </div>
+  </section>
+  
+  
   <section class="north-america-classes">
     <div class="america-container">
       <h2>United States</h2>
