--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   <section class="history">
     <div class="history-container">
       <h1>Master Alex Dong is a fourth generation Taijiquan Master of the Dong (Tung) family.</h1>
-      <p>He started his formal training with his father, Grand Master Dong Zeng Chen at the age of five in Hebei Province, the heart of martial arts in China. In 1983, at the age of twelve, he moved to Honolulu, Hawaii where he continued his training with his father and also studied with his grand-father, Grand Master Dong Hu Ling who had a major influence on his learning. In 1991, Alex Dong was awarded the US National Tai Chi Chuan championship in moving push hands and the Best Martial Spirit Title for all competitors while representing the state of Hawaii.</p>
+      <p>He started his formal training with his father, Grand Master Dong Zeng Chen at the age of five in Hebei Province, the heart of martial arts in China. In 1983, at the age of twelve, he moved to Honolulu, Hawaii where he continued his training with his father and also studied with his grandfather, Grand Master Dong Hu Ling who had a major influence on his learning. In 1991, Alex Dong was awarded the US National Tai Chi Chuan championship in moving push hands and the Best Martial Spirit Title for all competitors while representing the state of Hawaii.</p>
     </div>
   </section>
 
   <section class="history-red bg-image">
     <div class="history-container">
-      <h1>He started teaching at the age of 15 with his father</h1>
-      <p>where he assisted him in translation from Chinese to English during classes. In 1990 he started a class of his own in Hawaii, and has continued to teach ever since. In 2003, he relocated to New York City where he established his new school, the Alex Dong International Taijiquan Association. Genuine principles of taijiquan are taught and through that teaching Master Dong wants to spread and popularize the art of Taijiquan.</p>
+      <h1>Alex Dong has been teaching since the age of 15.</h1>
+      <p>From that age, he assisted his father in translation from Chinese to English during classes. In 1990 he started a class of his own in Hawaii, and has continued to teach ever since. In 2003, he relocated to New York City where he established his new school, the Alex Dong International Taijiquan Association. Genuine principles of taijiquan are taught and through that teaching Master Dong wants to spread and popularize the art of Taijiquan.</p>
     </div>
   </section>
 
@@ -54,7 +54,7 @@
   <section class="history-red bg-image2">
     <div class="history-container">
       <h1>He founded the Tung Ying Jie Taiji Legacy in honour of his great-grandfather</h1>
-      <p>To keep the traditions of the Dong family style alive and to recognize Tung Ying Jie Taiji as one of the most important practitioners in Taiji history. Master Dong translated a large part of Tung Ying Jie's book titled Taijiquan Explained commonly referred to as The Red Book.</p>
+      <p>To keep the traditions of the Dong family style alive and to recognize Tung Ying Jie as one of the most important practitioners in Taiji history. Master Dong translated a large part of Tung Ying Jie's book titled Taijiquan Explained commonly referred to as The Red Book.</p>
     </div>
   </section>
 
