--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <section class="history-red bg-image">
     <div class="history-container">
-      <h1>Alex Dong has been teaching since the age of 15.</h1>
+      <h1>He has been teaching since the age of 15.</h1>
       <p>From that age, he assisted his father in translation from Chinese to English during classes. In 1990 he started a class of his own in Hawaii, and has continued to teach ever since. In 2003, he relocated to New York City where he established his new school, the Alex Dong International Taijiquan Association. Genuine principles of taijiquan are taught and through that teaching Master Dong wants to spread and popularize the art of Taijiquan.</p>
     </div>
   </section>
