--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="history-container">
       <h1>He is a devoted teacher who gives to his students the real meaning of Taiji</h1>
       <p>Infecting them with an enthusiasm to work harder and with greater confidence. He also underlines the role of the soft Yang form in improving both health and self-defence skills. Alex Dong leads seminars worldwide in the United States, Canada, the United Kingdom, Greece, the Czech Republic and in Asia.
-      He teaches weekly classes in <a href="newyorkcity/">New York City</a></p>
+      He teaches weekly classes in <a href="classes/newyorkcity/">New York City</a></p>
     </div>
   </section>
 
