--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
   <section class="history">
     <div class="history-container">
-      <h1>Master Alex Dong is a fourth generation Taijiquan Master of the Dong (Tung) family.</h1>
+      <h1>Master Alex Dong is a fourth generation Taijiquan Master of the Dong (Tung) family</h1>
       <p>He started his formal training with his father, Grand Master Dong Zeng Chen at the age of five in Hebei Province, the heart of martial arts in China. In 1983, at the age of twelve, he moved to Honolulu, Hawaii where he continued his training with his father and also studied with his grandfather, Grand Master Dong Hu Ling who had a major influence on his learning. In 1991, Alex Dong was awarded the US National Tai Chi Chuan championship in moving push hands and the Best Martial Spirit Title for all competitors while representing the state of Hawaii.</p>
     </div>
   </section>
 
   <section class="history-red bg-image">
     <div class="history-container">
-      <h1>He has been teaching since the age of 15.</h1>
+      <h1>He has been teaching since the age of 15</h1>
       <p>From that age, he assisted his father in translation from Chinese to English during classes. In 1990 he started a class of his own in Hawaii, and has continued to teach ever since. In 2003, he relocated to New York City where he established his new school, the Alex Dong International Taijiquan Association. Genuine principles of taijiquan are taught and through that teaching Master Dong wants to spread and popularize the art of Taijiquan.</p>
     </div>
   </section>
