--- a/404.html
+++ b/404.html
@@ -27,21 +27,15 @@
 
   <div class="header-background">
     <h1>Error Page</h1>
-  
   </div>
 
-<ul>
-<li>&nbsp;</li>
-<li>&nbsp;</li>
-<li>&nbsp;</li>
-
-<li>You have reached this page in error.</li>
-
-<li>&nbsp;</li>
-<li>&nbsp;</li>
-
-<li> Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></li>
-</ul>
+  <section class="history">
+    <div class="history-container">
+      <h1>Error page</h1>
+      <p>You have reached this page in error.</p>
+      <p>Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></p>
+    </div>
+  </section>
 
 </body>
 </html>
