--- a/legacy/index.html
+++ b/legacy/index.html
@@ -32,9 +32,14 @@
 
   <section class="history lineage">
     <div class="history-container">
-      <p>Alex Dong's lineage is a renowned family of Taijiquan Masters. His great-grandfather, Grand Master Tung Ying Jie was for many years the national champion of China. Tung Ying Jie was a leading disciple of Yang Cheng-Fu, the main proponent of the modern Yang Long Form.</p>
+      <p>Alex Dong's lineage is a renowned family of tai chi chuan masters. 
+      His great-grandfather, Grand Master Tung Ying Jie was for many years the national champion of China. 
+      Tung Ying Jie was a leading disciple of Yang Cheng-Fu, the main proponent of the modern Yang Long Form.</p>
 
-      <p>Tung Ying Jie had also studied with Li Xiang Yuan who was a disciple of Hao Wei Jing founder of the Hao style Taiji. Alex Dong's grand-father, Grand Master Dong Hu Ling spread the art in Southeast Asia and the United States and his father, Grand Master Dong Zeng Chen, is world famous for his Taiji skills, particularly in push hands.</p>
+      <p>Tung Ying Jie had also studied with Li Xiang Yuan who was a disciple of Hao Wei Jing, the founder of the 
+      Hao style Taiji. Alex Dong's grandfather, Grand Master Dong Hu Ling, spread the art in Southeast Asia 
+      and the United States and his father, Grand Master Dong Zeng Chen, is world famous for his tai chi skills, 
+      particularly in push hands.</p>
 
       <h1>First Generation</h1>
       <img src="../assets/images/tungyingchiehpic.jpg">
