--- a/workshops/index.html
+++ b/workshops/index.html
@@ -81,9 +81,8 @@
 	  Make payment to:
 	</p>
 	
-	<pre><b>Alex Dong 
-	    69-11 Yellowstone Blvd. Apt. B27
-	    Forest Hills, NY. 11375, USA
+	<pre><b>Alex Dong, PO Box 750962 Forest Hills, NY 11375 USA
+	    
 	</b></pre>
 	
 	<p>
@@ -121,7 +120,8 @@
 	<h2>May 20th to May 22nd 2016</h2>
             <div id="montreal2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Montreal, Canada</h3>
-        <p>For more information email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+        <p>For more information email 
+       <a href="mailto:info@taichiclub.com">info@taichiclub.com</a> or phone: +1 514 726 8198/p>
       </div>
       
        <a href="#london2016" class="animated_popup"><h1>London Workshop</h1></a>
