--- a/workshops/index.html
+++ b/workshops/index.html
@@ -121,7 +121,7 @@
             <div id="montreal2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Montreal, Canada</h3>
         <p>For more information email 
-       <a href="mailto:info@taichiclub.com">info@taichiclub.com</a> or phone: +1 514 726 8198/p>
+       <a href="mailto:info@taichiclub.com">info@taichiclub.com</a> or phone: +1 514 726 8198</p>
       </div>
       
        <a href="#london2016" class="animated_popup"><h1>London Workshop</h1></a>
