--- a/workshops/index.html
+++ b/workshops/index.html
@@ -164,6 +164,8 @@
 	</dl>
 
 	<p>Please pay cash on the day.</p>
+	
+	<p>Accommodation can be booked through <a href="https://www.airbnb.co.uk/" target="_blank">Airbnb</a></p>
 
 	<p>Contact: Dave Fricker Email:
 	<a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a></p>
