--- a/workshops/index.html
+++ b/workshops/index.html
@@ -124,10 +124,10 @@
        <a href="mailto:info@taichiclub.com">info@taichiclub.com</a> or phone: +1 514 726 8198</p>
       </div>
       
-       <a href="#london2016" class="animated_popup"><h1>London Workshop</h1></a>
+       <a href="#london2016" class="animated_popup"><h1>London, UK</h1></a>
       	<h2>May 28th to May 30th 2016</h2>
             <div id="london2016" style="display:none" class="image-popup" class="book-details-popup">
-      <h3>London Workshop</h3>
+      <h3>London, UK</h3>
 
 	<p>
 	Master Alex Dong will be teaching in London for three days in May 2016:
@@ -182,19 +182,22 @@
   Master Alex Dong will be teaching in Prague for three days in June 2016: Friday June 3rd, Saturday June 4th and Sunday 5th.
   The venue will be for Friday still confirmed. 
   For Saturday and Sunday will be venue in ZS Campanus, Jirovcovo nam. 1782, Praha 4 – Chodov.
-  </p><p>
-  <a target="blank" href="https://www.google.cz/maps/place/J%C3%ADrovcovo+n%C3%A1m.+1782%2F1,+149+00+Praha+4-Chodov/@50.0236351,14.4877213,16z/data=!4m2!3m1!1s0x470b922bfcfe25b5:0x19d4f6a293a24373">Google map here.</a>
+  </p>
+  <p>
+  <a target="blank" href="https://www.google.cz/maps/place/J%C3%ADrovcovo+n%C3%A1m.+1782%2F1,+149+00+Praha+4-Chodov/@50.0236351,14.4877213,16z/data=!4m2!3m1!1s0x470b922bfcfe25b5:0x19d4f6a293a24373">Google map of ZS Campanus</a>
 <p>
 
 <p>
-  Metro line "C", station “Chodov“ and buses number 177 or nr. 193 to station 'U Kunratickeho lesa” (two stops only).
+  Metro line "C", station “Chodov“ and buses number 177 or 193 to station 'U Kunratickeho lesa” (two stops only).
 </p>
 
 <dl>
   <dt>Details: class times</dt>
   <dd>Friday evening 18:00 to 20:30 Qi qong and Push hands.</dd>
-  <dd>Saturday morning 10:00 to 12:30 Slow form I.part and afternoon 14:30 to 17:00 Slow form II. and III.parts.</dd>
-  <dd>Sunday morning 10:00 to 12:30 Sabre forms  and afternoon 14:30 to 17:00 Sword.</dd>
+  <dd>Saturday morning 10:00 to 12:30 Slow form (first part)</dd>
+  <dd>Saturday afternoon 14:30 to 17:00 Slow form (second and third parts)</dd>
+  <dd>Sunday morning 10:00 to 12:30 Sabre form</dd>
+  <dd>Sunday afternoon 14:30 to 17:00 Sword form</dd>
 </dl>
 
 <dl>
@@ -206,7 +209,7 @@
 
 <p>
   Please pay cash on the day, but come forward asap before the workshop
-  per e-mail – thank you!</p>
+  via e-mail – thank you!</p>
 
 <p>
   Accommodation can be booked through:
@@ -222,7 +225,7 @@ Contact: Sarka Rajtorova email <a href="mailto:cestataichi@gmail.com">cestataich
        <a href="#siena2016" class="animated_popup"><h1>Siena Push Hands Workshop</h1></a>
       	<h2>June 10th to June  15th 2016</h2>
             <div id="siena2016" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Siena Push Hands Workshop</h3>
+        <h3>Siena, Italy - Push Hands</h3>
         <h3>10th to 15th June 2016</h3>
 
 	<p>In 2016 Master Alex Dong will run his first push hand workshop in Italy.</p>
