--- a/workshops/index.html
+++ b/workshops/index.html
@@ -222,7 +222,7 @@ Contact: Sarka Rajtorova email <a href="mailto:cestataichi@gmail.com">cestataich
       </div>
 
       
-       <a href="#siena2016" class="animated_popup"><h1>Siena Push Hands Workshop</h1></a>
+       <a href="#siena2016" class="animated_popup"><h1>Siena, Italy - Push Hands</h1></a>
       	<h2>June 10th to June  15th 2016</h2>
             <div id="siena2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Siena, Italy - Push Hands</h3>
