--- a/workshops/index.html
+++ b/workshops/index.html
@@ -215,6 +215,7 @@
   Accommodation can be booked through:
 <a  target="blank" href="http://www.booking.com/searchresults.html?label=gen173nr-1DCAEoggJCAlhYSDNiBW5vcmVmaFCIAQGYATG4AQ_IAQ_YAQPoAQH4AQKoAgM;sid=0e1ca326a25ea6ee244bdb1d0b6b5e37;dcid=4;class_interval=1&dest_id=258&dest_type=district&dtdisc=0&group_adults=2&group_children=0&hlrd=0&hyb_red=0&inac=0&label_click=undef&nha_red=0&no_rooms=1&offset=0&postcard=0&redirected_from_city=0&redirected_from_landmark=0&redirected_from_region=0&review_score_group=empty&room1=A%2CA&sb_price_type=total&score_min=0&si=ai%2Cco%2Cci%2Cre%2Cdi&src=index&ss=Praha%204%2C%20Praha%2C%20%C4%8Cesk%C3%A1%20republika&ss_all=0&ss_raw=praha%204&ssb=empty&sshis=0&">Booking.com</a></p>
 
+Recommended accommodation - Apartman Student (nearby the workshop).
 <p>
 Contact: Sarka Rajtorova email <a href="mailto:cestataichi@gmail.com">cestataichi@gmail.com</a>
 </p>
