--- a/workshops/index.html
+++ b/workshops/index.html
@@ -178,47 +178,47 @@
         <h3>Prague, Czech Republic</h3>
         ﻿
 
-<p>
-  Master Alex Dong will be teaching in Prague for three days in June 2016: Friday June 3rd, Saturday June 4th and Sunday 5th.
-  The venue for Friday is still to be confirmed. 
-  For Saturday and Sunday, the venue is ZS Campanus, Jirovcovo nam. 1782, Praha 4 – Chodov.
-  </p>
-  <p>
-  <a target="blank" href="https://www.google.cz/maps/place/J%C3%ADrovcovo+n%C3%A1m.+1782%2F1,+149+00+Praha+4-Chodov/@50.0236351,14.4877213,16z/data=!4m2!3m1!1s0x470b922bfcfe25b5:0x19d4f6a293a24373">Google map of ZS Campanus</a>
-<p>
+	<p>
+  		Master Alex Dong will be teaching in Prague for three days in June 2016: Friday June 3rd, Saturday June 4th and Sunday 5th.
+  		The venue for Friday is still to be confirmed. 
+  		For Saturday and Sunday, the venue is ZS Campanus, Jirovcovo nam. 1782, Praha 4 – Chodov.
+  	</p>
+  	<p>
+  		<a target="blank" href="https://www.google.cz/maps/place/J%C3%ADrovcovo+n%C3%A1m.+1782%2F1,+149+00+Praha+4-Chodov/@50.0236351,14.4877213,16z/data=!4m2!3m1!1s0x470b922bfcfe25b5:0x19d4f6a293a24373">Google map of ZS Campanus</a>
+	<p>
 
-<p>
-  Metro line "C", station “Chodov“ and buses number 177 or 193 to station 'U Kunratickeho lesa” (two stops only).
-</p>
+	<p>
+  		Metro line "C", station “Chodov“ and buses number 177 or 193 to station 'U Kunratickeho lesa” (two stops only).
+	</p>
 
-<dl>
-  <dt>Details: class times</dt>
-  <dd>Friday evening 18:00 to 20:30 Qi qong and Push hands.</dd>
-  <dd>Saturday morning 10:00 to 12:30 Slow form (first part)</dd>
-  <dd>Saturday afternoon 14:30 to 17:00 Slow form (second and third parts)</dd>
-  <dd>Sunday morning 10:00 to 12:30 Sabre form</dd>
-  <dd>Sunday afternoon 14:30 to 17:00 Sword form</dd>
-</dl>
+	<dl>
+  		<dt>Details: class times</dt>
+  		<dd>Friday evening 18:00 to 20:30 Qi qong and Push hands.</dd>
+  		<dd>Saturday morning 10:00 to 12:30 Slow form (first part)</dd>
+  		<dd>Saturday afternoon 14:30 to 17:00 Slow form (second and third parts)</dd>
+  		<dd>Sunday morning 10:00 to 12:30 Sabre form</dd>
+  		<dd>Sunday afternoon 14:30 to 17:00 Sword form</dd>
+	</dl>
 
-<dl>
-  <dd>Fees: in US dollars</dd>
-  <dd>One class $55</dd>
-  <dd>Two classes $100</dd>
-  <dd>Five classes $210</dd>
-</dl>
+	<dl>
+  		<dd>Fees: in US dollars</dd>
+  		<dd>One class $55</dd>
+  		<dd>Two classes $100</dd>
+  		<dd>Five classes $210</dd>
+	</dl>
 
-<p>
-  Please pay cash on the day, but come forward asap before the workshop
-  via e-mail – thank you!</p>
+	<p>
+  		Please pay cash on the day, but come forward asap before the workshop
+  		via e-mail – thank you!</p>
 
-<p>
-  Accommodation can be booked through:
-<a  target="blank" href="http://www.booking.com/searchresults.html?label=gen173nr-1DCAEoggJCAlhYSDNiBW5vcmVmaFCIAQGYATG4AQ_IAQ_YAQPoAQH4AQKoAgM;sid=0e1ca326a25ea6ee244bdb1d0b6b5e37;dcid=4;class_interval=1&dest_id=258&dest_type=district&dtdisc=0&group_adults=2&group_children=0&hlrd=0&hyb_red=0&inac=0&label_click=undef&nha_red=0&no_rooms=1&offset=0&postcard=0&redirected_from_city=0&redirected_from_landmark=0&redirected_from_region=0&review_score_group=empty&room1=A%2CA&sb_price_type=total&score_min=0&si=ai%2Cco%2Cci%2Cre%2Cdi&src=index&ss=Praha%204%2C%20Praha%2C%20%C4%8Cesk%C3%A1%20republika&ss_all=0&ss_raw=praha%204&ssb=empty&sshis=0&">Booking.com</a></p>
-
-Recommended accommodation - Apartman Student (nearby the workshop).
-<p>
-Contact: Sarka Rajtorova email <a href="mailto:cestataichi@gmail.com">cestataichi@gmail.com</a>
-</p>
+	<p>
+		Recommended accommodation - Apartman Student (nearby the workshop).
+  		This an other accommodation can be booked through:
+ 		<a  target="blank" href="http://www.booking.com/searchresults.html?label=gen173nr-1DCAEoggJCAlhYSDNiBW5vcmVmaFCIAQGYATG4AQ_IAQ_YAQPoAQH4AQKoAgM;sid=0e1ca326a25ea6ee244bdb1d0b6b5e37;dcid=4;class_interval=1&dest_id=258&dest_type=district&dtdisc=0&group_adults=2&group_children=0&hlrd=0&hyb_red=0&inac=0&label_click=undef&nha_red=0&no_rooms=1&offset=0&postcard=0&redirected_from_city=0&redirected_from_landmark=0&redirected_from_region=0&review_score_group=empty&room1=A%2CA&sb_price_type=total&score_min=0&si=ai%2Cco%2Cci%2Cre%2Cdi&src=index&ss=Praha%204%2C%20Praha%2C%20%C4%8Cesk%C3%A1%20republika&ss_all=0&ss_raw=praha%204&ssb=empty&sshis=0&">Booking.com</a>
+	</p>
+	<p>
+		Contact: Sarka Rajtorova email <a href="mailto:cestataichi@gmail.com">cestataichi@gmail.com</a>
+	</p>
 
       </div>
 
