--- a/workshops/index.html
+++ b/workshops/index.html
@@ -275,11 +275,17 @@
        <h2>July 30th to 1st August 2016</h2>
             <div id="carmel2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Carmel, California</h3>
-        <dl></dl>
+        <dl>
 	<dt>Details</dt>
-	<dd>July 30 Community Church 9:30-12:00 Slow Set 2:4:30 Slow Set</dd>
-	<dd>July 31 Carmel Foundation 9:30-12:00 Slow Set 2:4:30 Hao Form</dd>
-	<dd>Aug   1 Community Church 9:30-12:00 Slow Set 2:4:30 Family Fast Form</dd>
+	<dd>July 30 9:30-12:00 Slow Set 2:00-4:30 Slow Set</dd>
+	<dd>Community Church, 4590 Carmel Valley Rd, Carmel, CA 93923</dd>
+	<dd>July 31 Carmel Foundation 9:30-12:00 Slow Set 2:00-4:30 Hao Form</dd>
+	<dd>Lincoln St, between 8th and 9th, Carmel-By-The-Sea, CA 93921</dd>
+	<dd>Aug   1  9:30-12:00 Slow Set 2:00-4:30 Family Fast Form</dd>
+	<dd>Community Church, 4590 Carmel Valley Rd, Carmel, CA 93923</dd>
+	<dt>Cost</dt>
+	<dd>$100 minimum (for one or two classes), $45 per additional classes
+		or $250 for all six</dd>
 	</dl>
 	<p>For more information email
         <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a>
