--- a/workshops/index.html
+++ b/workshops/index.html
@@ -250,7 +250,7 @@
 	<dd>Friday 10th                                8 pm - welcome dinner</dd>
 	<dd>Saturday 11th                           10 am - forms   4 pm - forms</dd>
 	<dd>Sunday 12th to Tuesday 14th   10 am - push hands  4 pm - push hands </dd>
-	<dd>Wednesday 15th                        8 pm - breakfast and check out </dd>
+	<dd>Wednesday 15th                        8 am - breakfast and check out </dd>
 
 
 	<dt>Cost</dt>
