--- a/workshops/index.html
+++ b/workshops/index.html
@@ -264,7 +264,7 @@
 	<dd>3 days Push Hands only &euro;220 (&euro;264 for people outside of the Dong School) </dd>
 	</dl>
 
-	<p>For more info contact  <a href="mailto:claudio.dongtaich@gmail.com">claudio.dongtaich@gmail.com</a>
+	<p>For more info contact  <a href="mailto:claudio.dongtaichi@gmail.com">claudio.dongtaichi@gmail.com</a>
 	</p>
 
         
