--- a/assets/logos/index.html
+++ b/assets/logos/index.html
@@ -1,1 +1,20 @@
-Logos.
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta name="keywords" content="tai chi, tai ji, taiji, Alex Dong, Dong Da De, NYC, nyc, london, uk, athens, greece, brazil">
+<title>Logos</title>
+</head>
+<body>
+
+<dl>
+  <dt>Alex Dong - Logos</dt>
+    <dd><a href="/assets/logos/Ying Jie_1.EPS">Ying Jie_1.EPS</a></dd>
+    <dd><a href="/assets/logos/Ying Jie_1.PSD">Ying Jie_1.PSD</a></dd>
+    <dd><a href="/assets/logos/Ying Jie_1.TIFF">Ying Jie_1.TIFF</a></dd>
+    <dd><a href="/assets/logos/Ying Jie_1.pdf">Ying Jie_1.pdf</a></dd>
+    <dd><a href="/assets/logos/Ying_Jie_seal.jpg">Ying_Jie_seal.jpg</a></dd>
+</dl>
+
+</body>
+</html>
+
