--- a/workshops/index.html
+++ b/workshops/index.html
@@ -233,6 +233,25 @@
       </div>
 
 
+       <a href="#greece2016" class="animated_popup"><h1>Athens, Greece</h1></a>
+       <h2>December 1st to December 4th 2016</h2>
+            <div id="greece2016" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Athens, Greece</h3>
+        <dl>
+        	<dt>Programme</dt> 
+		<dd>Thursday 1st 19.00-21.30 Push Hands</dd>
+		<dd>Friday 2nd 10.30-13.00 Advanced Knife ( possible lesson)</dd>
+		<dd>19.00-21.30 Family Set</dd>
+		<dd>Saturday 3rd 10.30-13.00 Slow Set </dd>
+		<dd>15.00-17.30 Hao Set</dd>
+		<dd>Sunday 4th 10.30-13.00 Slow Set</dd>
+		<dd>15.00-17.30 Sword Set </dd>
+		<dd>Will be held at venues in Athens which will be announced later</dd>
+        <p>For more information contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a>
+		or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
+        </p>
+      </div>
+
 
       <!-- elements end -->
 
