--- a/workshops/index.html
+++ b/workshops/index.html
@@ -246,7 +246,11 @@
 		<dd>15.00-17.30 Hao Set</dd>
 		<dd>Sunday 4th 10.30-13.00 Slow Set</dd>
 		<dd>15.00-17.30 Sword Set </dd>
+		<dt>Cost</dt>
+		<dd>225&euro; euro for the whole workshop or 35&euro; per lesson</dd></a>
+		<dt>Venue</dt>
 		<dd>Will be held at venues in Athens which will be announced later</dd>
+		</dl>
         <p>For more information contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a>
 		or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
         </p>
