--- a/workshops/index.html
+++ b/workshops/index.html
@@ -74,7 +74,7 @@
 	<dd>Monday afternoon sword and an introduction to The Sticks.</dd>
 	</dl>
 
-	<p>Participans should prepare two sticks about the same length as the Sabre. If you
+	<p>Participants should prepare two sticks about the same length as the Sabre. If you
 	hold one end, the other end should be just above your shoulder.</p>
 
 	<dl>
