--- a/workshops/index.html
+++ b/workshops/index.html
@@ -102,11 +102,17 @@
         ﻿
 
 	<p>
-  		Master Alex Dong will be teaching in Prague for three days in June 2016: Friday June 3rd, Saturday June 4th and Sunday 5th.
-  		The venue for Friday is still to be confirmed. 
-  		For Saturday and Sunday, the venue is ZS Campanus, Jirovcovo nam. 1782, Praha 4 – Chodov.
-  	</p>
+  		Master Alex Dong will be teaching in Prague for three days in June 2016: Friday June 3rd, Saturday 
+  		June 4th and Sunday 5th.
+  		
+		The venue for Friday is Dendrologicka zahrada (Dendrological Garden) in Pruhonice.
+		Bus connections: Prague from the Opatov subway station bus number 385, 363 to station Čestlice, in the arc and 328 to station Čestlice Kika-Aquapalace.
+
+		Google map is  <a target="blank" href="http://dendrologickazahrada.cz/pred-navstevou/kde-nas-najdete">here</a>
+	</p>
   	<p>
+  		For Saturday and Sunday, the venue is ZS Campanus, Jirovcovo nam. 1782, Praha 4 – Chodov.
+  	
   		<a target="blank" href="https://www.google.cz/maps/place/J%C3%ADrovcovo+n%C3%A1m.+1782%2F1,+149+00+Praha+4-Chodov/@50.0236351,14.4877213,16z/data=!4m2!3m1!1s0x470b922bfcfe25b5:0x19d4f6a293a24373">Google map of ZS Campanus</a>
 	<p>
 
