--- a/workshops/index.html
+++ b/workshops/index.html
@@ -102,13 +102,16 @@
         ﻿
 
 	<p>
+		<b>
   		Master Alex Dong will be teaching in Prague for three days in June 2016: Friday June 3rd, Saturday 
   		June 4th and Sunday 5th.
-  		
+  		</b>
+  	</p>
+  	<p>
 		The venue for Friday is Dendrologicka zahrada (Dendrological Garden) in Pruhonice.
 		Bus connections: Prague from the Opatov subway station bus number 385, 363 to station Čestlice, in the arc and 328 to station Čestlice Kika-Aquapalace.
 
-		Google map is  <a target="blank" href="http://dendrologickazahrada.cz/pred-navstevou/kde-nas-najdete">here</a>
+		Google map and directions <a target="blank" href="http://dendrologickazahrada.cz/pred-navstevou/kde-nas-najdete">here</a>
 	</p>
   	<p>
   		For Saturday and Sunday, the venue is ZS Campanus, Jirovcovo nam. 1782, Praha 4 – Chodov.
