--- a/workshops/index.html
+++ b/workshops/index.html
@@ -171,10 +171,34 @@
         or <a href="mailto:temasuda@hotmail.com">temasuda@hotmail.com</a></dd>
       </div>
 
-       <a href="#olympia2016" class="animated_popup"><h1>Olympia, Washington</h1></a>
-       <h2>August 4th to August 7th 2016</h2>
+       <a href="#olympia2016" class="animated_popup"><h1>Pacific Northwest</h1></a>
+       <h2>August 4th to August 6th 2016</h2>
             <div id="olympia2016" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Olympia, Washington</h3>
+        <h3>Pacific Northwest</h3>
+        
+        <dl>
+        <dt>Class Schedule</dt>
+        <dd>Friday August 5th</dd>
+        <dd>9:30 - 12:00 Broad sword and Hao Set</dd>
+        <dd>2:00 - 4:30 Family Fast Form and Straight Sword</dd>
+        <dd>Saturday August 6th</dd>
+        <dd>9:30-12:00 Chi Kung fundamentals 1 and Slow Set </dd>
+        <dd>2:00 - 4:30 Fajin set and Push Hands</dd>
+        <dd>Sunday August 6th</dd>
+        <dd 9:30 - 12:00 Chi kung fundamentals 2 and Slow Set </dd>
+        <dd>2:00 - 4:30 energy and structure work</dd>
+        <dt>Cost</dt>
+        <dd>$45 per class, $40 for 2 or more, or $220 for all six classes.</dd>
+        <dt>Venues</dt>
+        <dd>To be announced</dd>
+        </dl>
+
+        <p> To Register: Send payment to Alex Dong PO Box 750962 Forest Hills,
+        NY 11375 USA. Include your name, email address, phone number, details
+        of classes you wish to attend. Email
+        <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a>
+        </p>
+       
         <p>For more information email <a href="slowset@gmail.com">slowset@gmail.com</a></p>
       </div>
 
