--- a/workshops/index.html
+++ b/workshops/index.html
@@ -185,7 +185,7 @@
         <dd>9:30-12:00 Chi Kung fundamentals 1 and Slow Set </dd>
         <dd>2:00 - 4:30 Fajin set and Push Hands</dd>
         <dd>Sunday August 6th</dd>
-        <dd 9:30 - 12:00 Chi kung fundamentals 2 and Slow Set </dd>
+        <dd>9:30 - 12:00 Chi kung fundamentals 2 and Slow Set </dd>
         <dd>2:00 - 4:30 energy and structure work</dd>
         <dt>Cost</dt>
         <dd>$45 per class, $40 for 2 or more, or $220 for all six classes.</dd>
@@ -199,7 +199,7 @@
         <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a>
         </p>
        
-        <p>For more information email <a href="slowset@gmail.com">slowset@gmail.com</a></p>
+        <p>For more information email <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
       </div>
 
        <a href="#upstate2016" class="animated_popup"><h1>Upstate New York - Push Hands</h1></a>
