--- a/workshops/index.html
+++ b/workshops/index.html
@@ -146,7 +146,7 @@
           <h3>August 12th to August 15th 2016</h3>
         <p>4-Day Camp Intensive in New York’s Hudson Valley</p>
         <p>Lifebridge Sanctuary, Rosendale New York</p>
-	<p>Full details and a registration form are <a href="http://alexdongtaichi.com/assets/docs/NYPH8-16.doc"">here</a></p>
+	<p>Full details and a registration form are <a href="http://alexdongtaichi.com/assets/docs/UpstateNY_2016.doc">here</a></p>
         <p>For more information email  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
       </div>
 
