--- a/store/index.html
+++ b/store/index.html
@@ -384,7 +384,7 @@
 
     </div>
 
-    <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com.</a></h3>
+    <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></h3>
   </section>
 
   <footer>
