--- a/workshops/index.html
+++ b/workshops/index.html
@@ -72,8 +72,8 @@
         <dd>9:30 - 12:00 Broad sword and Hao Set</dd>
         <dd>2:00 - 4:30 Family Fast Form and Straight Sword</dd>
         <dd>Saturday August 6th</dd>
-        <dd>9:30-12:00 Chi Kung fundamentals 1 and Slow Set </dd>
-        <dd>2:00 - 4:30 Fajin set and Push Hands</dd>
+        <dd>10:30 -1 :00 Chi Kung fundamentals 1 and Slow Set </dd>
+        <dd>3:00 - 5:30 Fajin set and Push Hands</dd>
         <dd>Sunday August 7th</dd>
         <dd>9:30 - 12:00 Chi kung fundamentals 2 and Slow Set </dd>
         <dd>2:00 - 4:30 energy and structure work</dd>
