--- a/workshops/index.html
+++ b/workshops/index.html
@@ -80,7 +80,10 @@
         <dt>Cost</dt>
         <dd>$45 per class, $40 for 2 or more, or $220 for all six classes.</dd>
         <dt>Venues</dt>
-        <dd>To be announced</dd>
+        <dd>Friday morning at Tai Chi Barn, afternoon at Lien's Meditation Center</dd>
+	<dd>Saturday both classes at Focus Fitness 1801 West Bay Dr NW, Suite 104, Olympia, WA 98502</dd>
+	<dd>Sunday both classes at  Dave's Tai Chi Barn, or afternoon will be at Focus Fitness if temperatures are hot</dd>
+
         </dl>
 
         <p> To Register: Send payment to Alex Dong PO Box 750962 Forest Hills,
