--- a/workshops/index.html
+++ b/workshops/index.html
@@ -79,12 +79,14 @@
         <dd>2:00 - 4:30 energy and structure work</dd>
         <dt>Cost</dt>
         <dd>$45 per class, $40 for 2 or more, or $220 for all six classes.</dd>
-        <dt>Venues</dt>
-        <dd>Friday morning at Tai Chi Barn, afternoon at Lien's Meditation Center</dd>
-	<dd>Saturday both classes at Focus Fitness 1801 West Bay Dr NW, Suite 104, Olympia, WA 98502</dd>
-	<dd>Sunday both classes at  Dave's Tai Chi Barn, or afternoon will be at Focus Fitness if temperatures are hot</dd>
+         </dl>
+        <p>Friday and Sunday classes will be held at Dave's Tai Chi Barn, 
+        unless temperatures are extreme.  Saturday classes will be held at 
+        Focus Fitness 1801 West Bay Dr NW, Suite 104, Olympia, WA 98502. 
+        If you would like to be notified of venue changes contact 
+        <a href="mailto:slowset@gmail.com">slowset@gmail.com</a> </p>
 
-        </dl>
+       
 
         <p> To Register: Send payment to Alex Dong PO Box 750962 Forest Hills,
         NY 11375 USA. Include your name, email address, phone number, details
