--- a/workshops/index.html
+++ b/workshops/index.html
@@ -45,12 +45,29 @@
 
       
        <a href="#croatia2016" class="animated_popup"><h1>Croatia</h1></a>
-       <h2>September 2nd to September 4th 2016</h2>
+       <h2>September 1st to September 4th 2016</h2>
             <div id="croatia2016" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Croatia</h3>
-          <h3>September 2nd to September 4th 2016</h3>
-       <p>Details to folow</p>
-        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
+          <h3>September 1st to September 4th 2016</h3>
+          
+          <p>This year workshop in Croatia will held 2 to 4th September 
+          at Sukosan, little place at Adriatic coast very near Zadar airport.</p>
+	<dl>
+		<dt>Details</dt>
+		<dd>1.9. - check in,dinner</dd>
+		<dd>2.9. - AM and PM classes</dd>
+		<dd>3.9. - AM and PM classes</dd>
+		<dd>4.9. - AM and PM classes, lunch,going home</dd>
+	</dl>
+	<dl>
+		<dt>Costs</dt>
+		<dd>Fee is 200 &euro; or 230 $ pay to Alex</dd>
+		<dd>Accommodation and food 150 &euro; or 1130 kn pay to Martina</dd>
+	</dl>
+
+	<p>If  you are vegetarian,please let me know. 
+	For more information please contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
+	
       </div>
 
        <a href="#up2016" class="animated_popup"><h1>Upstate New York</h1></a>
