--- a/classes/windham/index.html
+++ b/classes/windham/index.html
@@ -43,9 +43,13 @@
 
           <p>Janet directs the taiji program at Golden Crane Traditional Martial Arts, and has been teaching taiji at the school since 2008. She enjoys sharing her knowledge and love of karate and taiji with her students. Her solid understanding of body mechanics, gained from years of training, is particularly beneficial for her students in learning how to execute each movement in a precise manner. Having trained in both external and internal (hard and soft) martial arts, she believes that our ultimate goal is to attain a higher level of self awareness through integration of our body, mind and spirit.</p>
         </div>
-      <p><strong>School:</strong> Golden Crane Traditional Martial Arts</p>
-      <p><strong>Class schedule:</strong> Please visit school website <a href="http://www.golden-crane.com" target="_blank">www.golden-crane.com</a></p>
-      <p><strong>Email:</strong> <a href="mailto:janetbriggs79@gmail.com">janetbriggs79@gmail.com</a></p>
+     
+     <dl>
+       <dt>Instructor: Janet Briggs</dt>
+        <dd>For class information, visit: <a href="http://www.eastwindtaichi.com/">www.eastwindtaichi.com</a>
+        <dd>To contact Janet, email:  <a href="mailto:eastwindtaichi@gmail.com">eastwindtaichi@gmail.com</a></dd>
+      </dl>
+      
     </div>
   </section>
 
