--- a/workshops/index.html
+++ b/workshops/index.html
@@ -47,7 +47,7 @@
         <p>4-Day Camp Intensive in New York’s Hudson Valley</p>
         <p>Lifebridge Sanctuary, Rosendale New York</p>
         <p>Full  camp plus weekend and beginners options available</p>
-        <p>Details and a booking form  are <a href="http://alexdongtaichi.com/assets/docs/upstateflyer10-16.doc"></a>here</a></p>
+        <p>Details and a booking form  are <a href="http://alexdongtaichi.com/assets/docs/upstateflyer10-16.doc">here</a></p>
 
         <p>For more information email  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
       </div>
