--- a/workshops/index.html
+++ b/workshops/index.html
@@ -116,6 +116,17 @@
 		or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
         </p>
       </div>
+      
+      
+       <a href="#france2017" class="animated_popup"><h1>Southern Ardèche, France</h1></a>
+       <h2>August 31st to September 5th 2017</h2>
+            <div id="france2017" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Southern Ardèche, France</h3>
+        <p>August 31st to September 5th 2017</p>
+	<p>Push Hands and Forms training in Southern Ardèche of France</p>
+	<p><a href="http://www.domainedutaille.com/" target="_blank">Domaine du Taillé en Ardèche</a>
+	<p>More details soon. </p>
+	</div>
 
 
       <!-- elements end -->
