--- a/classes/princeton/index.html
+++ b/classes/princeton/index.html
@@ -1,1 +1,191 @@
-text
+
+<!DOCTYPE HTML>
+
+<html>
+
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../assets/css/css.css">
+    <link rel="stylesheet" href="../../assets/css/popup.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Alex Dong Taiji</title>
+  </head>
+
+<body>
+
+  <header class="header-classes">
+    <nav class="nav-homepage">
+      <ul class="nav-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
+        <li><a class="store-button" href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="header-background">
+    <h1>London, England</h1>
+  </div>
+
+  <section class="history-classes">
+    <div class="history-container classes-container">
+    <div class="history-container classes-container instructor-container">
+      <a href="#gordonjoly-popup" class="animated_popup"><h1>Instructor: Gordon Joly</h1></a>
+        <div id="gordonjoly-popup" class="image-popup" style="display:none">
+          <h3>Gordon Joly</h3>
+          <img src="../../assets/images/instructor/gordonjoly.jpg">
+          <p>Gordon Joly began his tai chi journey in 1990 and has been teaching since 1997. Since then he has taught at the BBC Club (at BBC Television Centre) and Madame Tussauds in London (UK) and at many classes around London. He has held weekend workshops in the UK and Canada. His interest in tai chi started from a training in dance and some exploration of yoga. He likes the special type of meditation brought through practice of the tai chi Slow Set.</p>
+
+          <p>Gordon first met Master Alex Dong in the early 1990s and has followed the family style ever since. He sees the art as being accessible to all, and hence this allows both the energetic youngster, and the more careful older student to follow and gain benefit. He is interested in writing about tai chi, from all perspectives; he sees a relationship between some parts of mathematics and tai chi as well as between music and tai chi.</p>
+        </div>
+      <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
+    </div>
+
+    <div class="history-container classes-container instructor-container">
+      <a href="#arthurmartin-popup" class="animated_popup"><h1>Instructor: Arthur Martin</h1></a>
+      <div id="arthurmartin-popup" class="image-popup" style="display:none">
+        <h3>Arthur Martin</h3>
+        <img src="http://www.taichispirit.org.uk/images/arthur.jpg">
+        <p>I started studying tai chi in 1991 with the student, of the student of
+        my teacher's father: Dong Zhen Chen. I became a more serious student
+        in 1998 after I joined Master Alex's father's trip to China: The skill
+        and accuracy of their students from other countries blew me away and
+        gave me a goal.</p>
+
+        <p>From 1998 I tried a lot harder and attended many of Master Alex Dong's
+        workshops around the world. My teaching philosophy is to try and
+        plagiarize as much as I can from Master Alex's classes. Part of the
+        fun of being taught by Master Alex is, that feeling you get when he
+        suddenly makes simple, things that were making your head hurt trying
+        to understand.</p>
+
+        <p>I like tai chi because it's mentally and physically stimulating, and
+        makes you feel great. I live in Essex.</p>
+      </div>
+      <p>Thursday Beginners 11:00 to 12:20
+      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> Phone: 020 7482 4524. Cost £10.00</p>
+      <p>Thursday Beginners 18:40 to 20:10
+      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel) Cost £7.00.</p>
+      <p>Thursday Hao style and push hands, 20:10 to 20:40
+      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel)  Open to students who know the Slow Set (free) </p>
+      <p>Phone: 07952 593337</p>
+    </div>
+
+    <div class="history-container classes-container instructor-container">
+      <a href="#joycejoly-popup" class="animated_popup"><h1>Instructor: Joyce Joly</h1></a>
+      <div id="joycejoly-popup" class="image-popup" style="display:none">
+        <h3>Joyce Joly</h3>
+        <img src="http://www.taichispirit.org.uk/images/jij.jpg">
+      <p>Joyce Joly has been practicing tai chi for over 25 years, and has been teaching for 15 years.</p>
+      <p>All of her learning has been with the Dong Family. Firstly with Dong Zeng Chen and now with Alex Dong. Joyce has attended many classes in the UK and abroad taking advantage of the teaching to improve her tai chi.</p>
+      <p>Joyce has a particular interest in teaching older people and intends to start teaching elderly people in residential homes, giving tai chi based exercises.</p>
+      </div>
+       <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
+    </div>
+    <div class="history-container classes-container">
+    <div class="history-container classes-container instructor-container">
+      <a href="#davidfricker-popup" class="animated_popup"><h1>Instructor: David Fricker</h1></a>
+        <div id="davidfricker-popup" class="image-popup" style="display:none">
+          <h3>David Fricker</h3>
+           <p>I started martial arts in 1990 in a school named Ying Wu Kwan Kung Fu, where I achieved 3 grades and I also did judo as a child.</p>
+            <p>When I moved from one address to another in Dagenham I changed doctors that was where I met Phillip Shields.
+               I had one lesson of tai chi and felt fantastic and followed Phillip to all his other classes for seven years mainly learning slow set and push hands. Phillip was a great teacher of tai chi and when I met Alex Dong for the first time I could see where his teaching method had come from.
+            <p>I attended classes with Alex in the UK, and the energy and well being was great. I wouldn't say its a cure but it does help dilute physical and mental problems.
+            <p>I like tai chi because it is beneficial to my health and it makes me feel good as long as I keep training. </p>
+        </div>
+      <p>Fanshawe Community Hall</br>
+        Barnmead Road</br>
+        Dagenham RM9 5DX</br>
+        12:30pm - 1:30pm Tuesdays</br>
+        Please make a donation to pay for the hall</br>
+        Email: <a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a>
+      </p>
+    </div>
+
+  </section>
+
+  <footer>
+    <nav class="footer-homepage">
+      <ul class="footer-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a href="../../workshops/">Workshops</a></li>
+        <li><a href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="../../assets/js/jquery.popup.js"></script>
+  <script>
+    $(function(){
+      /*-------------------------------
+        GENERAL EXAMPLES
+      -------------------------------*/
+      // Default usage
+      $('.default_popup').popup();
+      // Animated popup
+      $('.animated_popup').popup({
+        show        : function($popup, $back){
+          var plugin = this,
+            center = plugin.getCenter();
+          $popup
+            .css({
+              top     : - $popup.children().outerHeight(),
+              left    : center.left,
+              opacity : 1
+            })
+            .animate({top : center.top}, 500, 'easeOutBack', function(){
+              // Call the open callback
+              plugin.o.afterOpen.call(plugin);
+            });
+        }
+      });
+      // Call ALL the callbacks
+      $('.callback_popup').popup({
+        beforeOpen          : function(type){
+          console.log('beforeOpen -', type);
+        },
+        afterOpen           : function(){
+          console.log('afterOpen');
+        },
+        beforeClose         : function(){
+          console.log('beforeClose');
+        },
+        afterClose          : function(){
+          console.log('afterClose');
+        }
+      });
+      // Error popup
+      $('.error_popup').popup({
+        error   : function(content, type){
+          // Just call open again, it'll replace the content
+          this.open('<h1>ERROR!</h1><p>Content "'+content+'" of type "'+type+'" could not be loaded.</p>', 'html');
+        }
+      });
+    });
+    /*---------------------
+      JQUERY EASING
+    */
+    $.extend($.easing, {
+      easeOutBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*((t=t/d-1)*t*((s+1)*t + s) + 1) + b;
+      },
+      easeInBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*(t/=d)*t*((s+1)*t - s) + b;
+      }
+    });
+  </script>
+
+</body>
+
+</html>
+
